Bootstrapping test framework
